Change to auto-generated classes
